new : make the contact form working...

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ APP_CV_EMAIL=""
 APP_CV_PHONE=""
 APP_CV_GITHUB=""
 APP_CV_LINKEDIN=""
+SLACK_ALERT_WEBHOOK=""
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
