--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-pdf": "^1.4",
-        "spatie/laravel-slack-alerts": "^1.3"
+        "spatie/laravel-pdf": "^1.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
