--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ APP_CV_EMAIL=""
 APP_CV_PHONE=""
 APP_CV_GITHUB=""
 APP_CV_LINKEDIN=""
+APP_CV_WEBSITE=""
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
